--- a/src/License.Portal/License.Portal.Web/appsettings.json
+++ b/src/License.Portal/License.Portal.Web/appsettings.json
@@ -1,8 +1,25 @@
+/*
+  WARNING - This file will be checked into source control. Use this as an example file only.
+*/
 {
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": ""
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Email": {
+    "Host": "",
+    "Port": 0,
+    "Email": "",
+    "Password": "",
+    "DisplayName": ""
+  },
+  "Admin": {
+    "Email": "",
+    "Password": ""
+  }
 }
