--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 /src/License.Portal/License.Portal.Web/appsettings.production.json
+/src/License.Portal/License.Portal.Web/appsettings.Development.json
